Bug 1309728 - Fix invisible rule-view checkboxes in light theme. r=jdescottes
MozReview-Commit-ID: Le30FWc3iuf

UltraBlame original commit: 23c212f907668ed62830424ecc1474193ccb11ed

--- a/devtools/client/themes/common.css
+++ b/devtools/client/themes/common.css
@@ -5642,11 +5642,49 @@ background
 -
 position
 :
+0
+0
+;
+}
+.
+theme
+-
+dark
+.
+theme
+-
+checkbox
+{
+background
+-
+position
+:
 -
 28px
 0
 ;
 }
+.
+theme
+-
+checkbox
+[
+checked
+]
+{
+background
+-
+position
+:
+-
+14px
+0
+;
+}
+.
+theme
+-
+dark
 .
 theme
 -
